Fix Needing to Scroll on iPhone SE - NewItem Page

--- a/public/styles/stylesNewItem.css
+++ b/public/styles/stylesNewItem.css
@@ -35,7 +35,7 @@
 
 /* Nutrition Input Fields */
 .itemInputsContainer{
-    padding: 70px 0 60px 0;
+    padding: 0;
     text-align: center;
 }
 
@@ -62,6 +62,13 @@
     margin: 5px;
     outline-color: #5f65d8;
     width: 35%;
+}
+.vertical-center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 
 /* Cancel & Save Buttons */
@@ -101,15 +108,11 @@
 /* Media Queries ========================================== */
 
 /* Allow Scrollable Page On Small Devices */
-@media (min-height: 600px) {
-    .itemInputsContainer{
-        padding: 0;
+@media (max-height: 600px) {
+    .buttonsDiv{
+        padding-top: 20px;
     }
-    .vertical-center {
-        margin: 0;
-        position: absolute;
-        top: 50%;
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
+    .newItemDiv input{
+        margin: 2px;
     }
 }
